--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeren nettisivu</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h3 class="Alkuteksti">Jere Aronsalo </h3>
 </body>
 </html>
