--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img style="width: -webkit-fill-available;" src="ylakuva.jpg" alt="ylakuva">
     <h3 class="Alkuteksti">Jere Aronsalo </h3>
 </body>
 </html>
