--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeren nettisivu</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
-    <img style="width: -webkit-fill-available;" src="ylakuva.jpg" alt="ylakuva">
-    <h3 class="Alkuteksti">Jere Aronsalo </h3>
+    <header>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Social</a></li>
+        </ul>
+        <h3 class="Alkuteksti">Jere Aronsalo </h3>
+        <img class="image" src="ylakuva.jpg" alt="ylakuva">
+    </header>
 </body>
 </html>
