--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
-<body>
-    <header>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Social</a></li>
-        </ul>
-        <h1 class="Alkuteksti">Jere Aronsalo </h3>
-        <img class="image" src="ylakuva.jpg" alt="ylakuva">
-    </header>
-</body>
+    <body>
+        <header>
+            <ul>
+                <li><a href="#">// Home</a></li>
+                <li><a href="#">// Contact</a></li>
+                <li><a href="#">// Social</a></li>
+            </ul>
+        </header>
+        <section>
+            <h1 id="alkuteksti">Portfolio </h3>
+            <img class="image" src="ylakuva.jpg" alt="ylakuva">
+            <img class="logo" src="Untitled.png" alt="logo">
+        </section>
+
+        <div class="lorem">
+            <h2>Loremia</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Labore rem deserunt delectus nobis fugiat odio laboriosam itaque.<br>
+                Voluptatibus, suscipit vel nesciunt voluptatum <br>
+                neque magnam? Rem reprehenderit error maxime tempora veritatis?
+            </p>
+        </div>
+    </body>
 </html>
