--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#">// Home</a></li>
                 <li><a href="#">// Contact</a></li>
-                <li><a href="#">// Social</a></li>
+                <li><a href="https://aronsalo.wordpress.com/">// Social</a></li>
             </ul>
         </header>
         <section>
