--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <header>
             <ul>
-                <li><a href="#">// Home</a></li>
-                <li><a href="#">// Contact</a></li>
+                <li><a href="">// Home</a></li>
+                <li><a href="https://aronsalo.wordpress.com/"">// Contact</a></li>
                 <li><a href="https://aronsalo.wordpress.com/">// Social</a></li>
             </ul>
         </header>
