--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
         </section>
 
         <div class="lorem">
-            <h2>Loremia</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Labore rem deserunt delectus nobis fugiat odio laboriosam itaque.<br>
-                Voluptatibus, suscipit vel nesciunt voluptatum <br>
-                neque magnam? Rem reprehenderit error maxime tempora veritatis?
-            </p>
+            <div>
+                <h2>Education</h2>
+                <h1>-------------</h1>
+                <p>
+                    Currently studying in Satakunta University of Applied Sciences.
+                </p>
+        </div>
         </div>
     </body>
 </html>
