--- a/index.html
+++ b/index.html
@@ -22,14 +22,29 @@
             <img class="logo" src="Untitled.png" alt="logo">
         </section>
 
-        <div class="lorem">
-            <div>
+        <div class="boxes">
+            <div class="box1">
                 <h2>Education</h2>
                 <h1>-------------</h1>
                 <p>
-                    Currently studying in Satakunta University of Applied Sciences.
+                    Currently studying Business Information Systems in Satakunta University of Applied Sciences.
                 </p>
+            </div>
+            <div class="box2">
+                <h2>My Experience</h2>
+                <h1>-------------</h1>
+                <p>
+                    Video editing<br>
+                    Blender<br>
+                    React<br>
+                    Css/Html
+                </p>
+            </div>
         </div>
+        <div class="link">
+            <ul>
+                <li><a href="https://github.com/JekeZ">To my GitHub</a></li>
+            </ul>
         </div>
     </body>
 </html>
