--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
         </div>
         <div class="link">
-            <ul>
-                <li><a href="https://github.com/JekeZ">To my GitHub</a></li>
-            </ul>
+            <ol>
+                <li><a href="https://github.com/JekeZ" style="text-decoration: none;">To my GitHub</a></li>
+            </ol>
         </div>
     </body>
 </html>
