--- a/index.html
+++ b/index.html
@@ -11,37 +11,26 @@
     <body>
         <header>
             <ul>
-                <li><a href="">// Home</a></li>
-                <li><a href="https://aronsalo.wordpress.com/"">// Contact</a></li>
-                <li><a href="https://aronsalo.wordpress.com/">// Social</a></li>
+                <li class="btn1"><a href="">// Home</a></li>
+                <li class="btn2"><a href="https://aronsalo.wordpress.com/"">// Contact</a></li>
+                <li class="btn3"><a href="https://aronsalo.wordpress.com/">// Social</a></li>
             </ul>
+            <h1 id="alkuteksti">Portfolio </h1>
         </header>
         <section>
-            <h1 id="alkuteksti">Portfolio </h3>
-            <img class="image" src="ylakuva.jpg" alt="ylakuva">
-            <img class="logo" src="Untitled.png" alt="logo">
-            <img src="stars.png" id="stars" alt="stars">
+            <h2 id="Jere">JERE</h2>
+            <h2 id="Aronsalo">ARONSALO</h2>
+            <h3 id="alateksti">Satakunta University of Applied Sciences</h3>
         </section>
-        <script>
-            let stars = document.getElementById('stars');
-
-            window.addEventListener('scroll', function(){
-                let value = window.scrollY;
-                stars.style.top = value * .40 + 'px';
-            })
-        </script>
-
         <div class="boxes">
             <div class="box1">
                 <h2>Education</h2>
-                <h1>-------------</h1>
                 <p>
                     Currently studying Business Information Systems in Satakunta University of Applied Sciences.
                 </p>
             </div>
             <div class="box2">
                 <h2>My Experience</h2>
-                <h1>-------------</h1>
                 <p>
                     JavaScript<br>
                     Blender<br>
@@ -52,7 +41,6 @@
             </div>
             <div class="box3">
                 <h2>My Work</h2>
-                <h1>-------------</h1>
                     <ol>
                         <li><a href="https://github.com/JekeZ" style="text-decoration: none;">To my GitHub</a></li>
                     </ol>
