--- a/index.html
+++ b/index.html
@@ -51,5 +51,14 @@
             <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/louWxXWp_Zg" title="YouTube video player" 
             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <div class="aboutme">
+            <h2>About me</h2>
+            <p>Born in Tampere, Finland 1997.<br>
+            Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
+            Interested in Web designing, React, Blender</p>
+        </div>
+        <footer>
+            <div>Jere Aronsalo's Portfolio website</div>
+        </footer>
     </body>
 </html>
