--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="aboutme">
+            <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
             <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
             Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
-            Interested in Web designing, React, Blender</p>
+            Interested in Web designing, React, JavaScript, Blender</p>
         </div>
-        <footer>
-            <div>Jere Aronsalo's Portfolio website</div>
+        <footer class="footer">
+            <div class="Toptext">Jere Aronsalo's Portfolio website</div>
+            <div class="Contact">Interested in working together? Let's Connect via LinkedIn or Email</div>
         </footer>
     </body>
 </html>
