--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <ul>
                 <li class="btn1"><a href="">// Home</a></li>
-                <li class="btn2"><a href="https://aronsalo.wordpress.com/"">// Contact</a></li>
+                <li id="contact" class="btn2"><a href="#contact">// Contact</a></li>
                 <li class="btn3"><a href="https://aronsalo.wordpress.com/">// Social</a></li>
             </ul>
             <h1 id="alkuteksti">Portfolio </h1>
@@ -55,12 +55,17 @@
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
             <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
-            Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
+            Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br><br>
             Interested in Web designing, React, JavaScript, Blender</p>
         </div>
         <footer class="footer">
-            <div class="Toptext">Jere Aronsalo's Portfolio website</div>
             <div class="Contact">Interested in working together? Let's Connect via LinkedIn or Email</div>
+            <form action="https://formsubmit.co/7ff7f149a2557c9a6f555bfef53345df " method="post">
+                <input type="text" name="Name" placeholder="Full Name" required>
+                <input type="email" name="Email" placeholder="Email" required>
+                <textarea name="Message" id="" placeholder="Message" cols="30" rows="10" required></textarea>
+                <button type="submit">Send</button>
+            </form>
         </footer>
     </body>
 </html>
