--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <ul>
                 <li class="btn1"><a href="">// Home</a></li>
-                <li id="contact" class="btn2"><a href="#contact">// Contact</a></li>
+                <li class="btn2"><a href="#contact">// Contact</a></li>
                 <li class="btn3"><a href="https://aronsalo.wordpress.com/">// Social</a></li>
             </ul>
             <h1 id="alkuteksti">Portfolio </h1>
@@ -59,7 +59,7 @@
             Interested in Web designing, React, JavaScript, Blender</p>
         </div>
         <footer class="footer">
-            <div class="Contact">Interested in working together? Let's Connect via LinkedIn or Email</div>
+            <div id ="contact" class="Contact">Interested in working together? Let's Connect via LinkedIn or Email</div>
             <form action="https://formsubmit.co/7ff7f149a2557c9a6f555bfef53345df " method="post">
                 <input type="text" name="Name" placeholder="Full Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
