--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
     <body>
+        <a id="top"></a>
         <header>
             <ul>
-                <li class="btn1"><a href="">// Home</a></li>
+                <li class="btn1"><a href="#top">// Home</a></li>
                 <li class="btn2"><a href="#contact">// Contact</a></li>
                 <li class="btn3"><a href="https://aronsalo.wordpress.com/">// Social</a></li>
             </ul>
@@ -42,14 +43,13 @@
             <div class="box3">
                 <h2>My Work</h2>
                     <ol>
-                        <li><a href="https://github.com/JekeZ" style="text-decoration: none;">To my GitHub</a></li>
+                        <li><a href="https://github.com/JekeZ" style="text-decoration: none;">Link to my GitHub</a></li>
                     </ol>
             </div>
         </div>
         <div class="Work">
             <h1>Work</h1>
-            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/louWxXWp_Zg" title="YouTube video player" 
-            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/8EkGH-SN4Is" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="aboutme">
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
