--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="Work">
             <h1>Work</h1>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/8EkGH-SN4Is" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="video" width="650px" height="400" src="https://www.youtube.com/embed/8EkGH-SN4Is" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="aboutme">
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
