--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             Interested in Web designing, React, JavaScript, Blender</p>
         </div>
         <footer class="footer">
+                <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/">
+                <img id="logo" src="linkedin.png" alt="logo">
+                </a>
+                <img id="mail" src="mail.png" alt="mail">
+
             <div id ="contact" class="Contact">Interested in working together? Let's Connect via LinkedIn or Email</div>
             <form action="https://formsubmit.co/7ff7f149a2557c9a6f555bfef53345df " method="post">
                 <input type="text" name="Name" placeholder="Full Name" required>
