--- a/index.html
+++ b/index.html
@@ -55,8 +55,11 @@
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
             <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
-            Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br><br>
-            Interested in Web designing, React, JavaScript, Blender</p>
+            Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
+            In my freetime, I enjoy playing guitar, learning to code and edit videos using Movie Studio 17 Platinum.<br><br>
+            I have learned variety of languages, via school and freetime.<br> Mostly enjoying Python and making websites.
+            Basics of blender.<br>
+            Interested in Web designing, React, JavaScript, Blender and Video editing.</p>
         </div>
         <footer class="footer">
                 <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/">
