--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
                 </p>
             </div>
             <div class="box2">
-                <h2>My Experience</h2>
+                <h2>My Skills</h2>
                 <p>
                     JavaScript<br>
                     Blender<br>
                     React<br>
-                    Css/Html<br>
-                    Video editing
+                    Html/Css<br>
+                    Video editing <br>
+                    WordPress<br>
+                    Python
                 </p>
             </div>
             <div class="box3">
@@ -48,8 +50,14 @@
             </div>
         </div>
         <div class="Work">
-            <h1>Work</h1>
-            <iframe id="video" width="650px" height="400" src="https://www.youtube.com/embed/8EkGH-SN4Is" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h1>Projects</h1>
+            <div class="videos">
+                <iframe id="video" width="650px" height="400" src="https://www.youtube.com/embed/8EkGH-SN4Is" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="video2" width="650px" height="400" src="https://www.youtube.com/embed/7yS3nKvleR8" title="YouTube video player" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="aboutme">
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
@@ -58,8 +66,9 @@
             Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
             In my freetime, I enjoy playing guitar, learning to code and edit videos using Movie Studio 17 Platinum.<br><br>
             I have learned variety of languages, via school and freetime.<br> Mostly enjoying Python and making websites.
-            Basics of blender.<br>
-            Interested in Web designing, React, JavaScript, Blender and Video editing.</p>
+            I also know the basics of Blender.<br>
+            Interested in Web designing, React, JavaScript, Blender and Video editing.
+            Would love to learn more</p>
         </div>
         <footer class="footer">
                 <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/">
