--- a/index.html
+++ b/index.html
@@ -25,28 +25,33 @@
         </section>
         <div class="boxes">
             <div class="box1">
+                <div class="paragraph1">< p ></div>
+                <div class="paragraph2">< / p ></div>
                 <h2>Education</h2>
                 <p>
                     Currently studying Business Information Systems in Satakunta University of Applied Sciences.
                 </p>
             </div>
             <div class="box2">
+                <div class="paragraph1">< p ></div>
+                <div class="paragraph2">< / p ></div>
                 <h2>My Skills</h2>
                 <p>
-                    JavaScript<br>
-                    Blender<br>
-                    React<br>
-                    Html/Css<br>
-                    Video editing <br>
-                    WordPress<br>
-                    Python
+                    JavaScript,
+                    Blender,
+                    React,
+                    Html/Css,
+                    Video editing,
+                    WordPress,
+                    Python,
+                    Unreal Engine
                 </p>
             </div>
             <div class="box3">
                 <h2>My Work</h2>
-                    <ol>
-                        <li><a href="https://github.com/JekeZ" style="text-decoration: none;">Link to my GitHub</a></li>
-                    </ol>
+                <div class="link">< a ></div>
+                <div class="link2">< / a ></div>
+                <a href="https://github.com/JekeZ" style="text-decoration: none;">Link to my GitHub</a>
             </div>
         </div>
         <div class="Work">
@@ -76,12 +81,13 @@
                 </a>
                 <img id="mail" src="mail.png" alt="mail">
 
-            <div id ="contact" class="Contact">Interested in working together? Let's Connect via LinkedIn or Email</div>
+            <div id ="contact" class="Contact">Interested in working together? Let's Connect via LinkedIn or Email!</div>
             <form action="https://formsubmit.co/7ff7f149a2557c9a6f555bfef53345df " method="post">
                 <input type="text" name="Name" placeholder="Full Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
                 <textarea name="Message" id="" placeholder="Message" cols="30" rows="10" required></textarea>
                 <button type="submit">Send</button>
+                <h4>Thanks for viewing my portfolio website!</h4>
             </form>
         </footer>
     </body>
