--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </section>
         <div class="boxes">
             <div class="box1">
+                <img class="kirja" src="book-icon-145.png" alt="kirja">
+
                 <div class="paragraph1">< p ></div>
                 <div class="paragraph2">< / p ></div>
                 <h2>Education</h2>
@@ -33,9 +35,10 @@
                 </p>
             </div>
             <div class="box2">
+                <img class="taidot" src="skills.png" alt="skills">
                 <div class="paragraph1">< p ></div>
                 <div class="paragraph2">< / p ></div>
-                <h2>My Skills</h2>
+                <h2>Skills</h2>
                 <p>
                     JavaScript,
                     Blender,
@@ -48,6 +51,7 @@
                 </p>
             </div>
             <div class="box3">
+                <img class="github" src="github.png" alt="github">
                 <h2>My Work</h2>
                 <div class="link">< a ></div>
                 <div class="link2">< / a ></div>
