--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="Work" data-aos="fade-in">
             <h1>Projects</h1>
             <div class="videos">
-                <iframe id="video" width="650px" height="400" src="https://www.youtube.com/embed/8EkGH-SN4Is" 
+                <iframe id="video" src="https://www.youtube.com/embed/8EkGH-SN4Is" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                 encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe id="video2" width="650px" height="400" src="https://www.youtube.com/embed/7yS3nKvleR8" title="YouTube video player" 
@@ -80,7 +80,7 @@
             Interested in Web designing, React, JavaScript, Blender and Video editing.
             </p>
         </div>
-        <footer class="footer" data-aos="zoom-in">
+        <footer class="footer" data-aos="fade-in">
                 <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/">
                 <img id="logo" src="linkedin.png" alt="logo">
                 </a>
