--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li class="btn1"><a href="#top">// Home</a></li>
                 <li class="btn2"><a href="#contact">// Contact</a></li>
-                <li class="btn3"><a href="https://aronsalo.wordpress.com/">// Social</a></li>
+                <li class="btn3"><a href="https://aronsalo.wordpress.com/" target="_blank">// Social</a></li>
             </ul>
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
@@ -56,7 +56,7 @@
                 <h2>My Work</h2>
                 <div class="link">< a ></div>
                 <div class="link2">< / a ></div>
-                <a href="https://github.com/JekeZ" style="text-decoration: none;">Link to my GitHub</a>
+                <a style="text-decoration: underline;" href="https://github.com/JekeZ" style="text-decoration: none;" target="_blank">Link to my GitHub</a>
             </div>
         </div>
         <div class="Work" data-aos="fade-in">
@@ -73,10 +73,10 @@
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
             <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
-            Currently studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
-            In my freetime, I enjoy playing guitar, learning to code and edit videos using Movie Studio 17 Platinum.<br><br>
-            I have learned variety of programming languages, via school and freetime.<br> Mostly enjoying Python and making websites.
-            I also know the basics of Blender.<br>
+            I'm on my thrid year studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
+            In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
+            I have learned variety of programming languages via school and freetime.<br>
+            I have also learned the basics of Blender due the passionate of animating.<br><br>
             Interested in Web designing, React, JavaScript, Blender and Video editing.
             </p>
         </div>
@@ -91,7 +91,7 @@
                 <input type="text" name="Name" placeholder="Full Name" required>
                 <input type="email" name="Email" placeholder="Email" required>
                 <textarea name="Message" id="" placeholder="Message" cols="30" rows="10" required></textarea>
-                <button type="submit">Send</button>
+                <button class="send" type="submit">Send</button>
                 <h4 data-aos="zoom-in">Thanks for viewing my portfolio website!</h4>
             </form>
         </footer>
