--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                 <textarea name="Message" id="" placeholder="Message" cols="30" rows="10" required></textarea>
                 <button class="send" type="submit">Send</button>
                 <h4 data-aos="zoom-in">Thanks for viewing my portfolio website!</h4>
+                <a class="totop" href="#top">Back to top</a>
             </form>
         </footer>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
