--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
             <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
-            I'm on my thrid year studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
+            I'm on my third year studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
             In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
             I have learned variety of programming languages via school and freetime.<br>
             I have also learned the basics of Blender due the passionate of animating.<br><br>
