--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Video editing,
                     WordPress,
                     Python,
-                    Unreal Engine
+                    Customer service
                 </p>
             </div>
             <div class="box3" data-aos="zoom-in">
@@ -73,11 +73,12 @@
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
             <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
-            I'm on my third year studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
+            I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
+            Currently working as an Application Specialist at 2M-IT Oy.<br>
             In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
             I have learned variety of programming languages via school and freetime.<br>
             I have also learned the basics of Blender due the passionate of animating.<br><br>
-            Interested in Web designing, React, JavaScript, Blender and Video editing.
+            Interested in all kinds of development projects/jobs.
             </p>
         </div>
         <footer class="footer" data-aos="fade-in">
