--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2 id="Jere" data-aos="slide-left">JERE</h2>
             <h2 id="Aronsalo" data-aos="slide-right">ARONSALO</h2>
             <h3 id="alateksti" data-aos="slide-up">Satakunta University of Applied Sciences<br></h3>
-            <img class="tausta" src="tausta.jpg">
+            <img class="tausta" src="tausta.jpg" data-aos="fade-in">
         </section>
         <div class="boxes" data-aos="fade-in">
             <div class="box1" data-aos="zoom-in">
@@ -74,8 +74,8 @@
             <img class="koodikuva" src="koodi.jpg" alt="koodikuva">
             <h2>About me</h2>
             <p>Born in Tampere, Finland 1997.<br>
-            I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in Pori.<br>
-            Currently working as a Software developer at WiseNetwork Oy.<br><br>
+            I'm on my fourth year studying Business Information Systems in Satakunta University of Applied Sciences in the city of Pori.<br>
+            Currently working as a Software developer intern at WiseNetwork Oy.<br><br>
             In my freetime besides of coding, I enjoy playing guitar, grinding video games and edit videos using Movie Studio 17 Platinum.<br><br>
             I have learned variety of programming languages via school and freetime.<br>
             I have also learned the basics of Blender due the passionate of animating.<br><br>
