--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
             Interested in all kinds of development projects/jobs.
             </p>
         </div>
+        <div class="row">
+            <div class="column">Work experience</div>
+            <div class="column" style="background: linear-gradient( rgb(36, 71, 231), rgb(236, 236, 236)); color: white;">
+                Started my IT-field as an Application Specialist trainee in july of 2023.<br>
+                Hopped to Software development field in november 2023.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus deleniti, blanditiis obcaecati, laborum incidunt ullam totam repellat laudantium, 
+                nemo numquam accusantium ratione ipsa animi at vel eius. Iure, nostrum est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor earum itaque, veniam ducimus voluptas quia vero maiores? 
+                Recusandae, ipsa, quidem eum vero tempore dolorum, expedita unde consequatur at error sint?
+            </div>
+        </div>
         <footer class="footer" data-aos="fade-in">
                 <a href="https://www.linkedin.com/in/jere-aronsalo-466183228/">
                 <img id="logo" src="linkedin.png" alt="logo">
@@ -94,8 +104,9 @@
                 <input type="email" name="Email" placeholder="Email" required>
                 <textarea name="Message" id="" placeholder="Message" cols="30" rows="10" required></textarea>
                 <button class="send" type="submit">Send</button>
-                <h4 data-aos="zoom-in">Thanks for viewing my portfolio website!</h4>
+
                 <a class="totop" href="#top">Back to top</a>
+                <h3 class="lopputeksti">Made by Jere Aronsalo | Powered by GitHub Pages</h3>
             </form>
         </footer>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
