--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li class="btn2"><a href="#contact">// Contact</a></li>
                 <li class="btn3"><a href="https://aronsalo.wordpress.com/" target="_blank">// Social</a></li>
             </ul>
+            <img class="JA" src="cropped.png" alt="logo">
             <h1 id="alkuteksti">< Portfolio ></h1>
         </header>
         <section>
@@ -82,14 +83,25 @@
             Interested in all kinds of development projects/jobs.
             </p>
         </div>
-        <div class="row">
-            <div class="column">Work experience</div>
+        <div class="row" data-aos="fade-in">
+            <div class="column" style="background-image: url('experience.png')"></div>
             <div class="column" style="background: linear-gradient( rgb(36, 71, 231), rgb(236, 236, 236)); color: white;">
-                Started my IT-field as an Application Specialist trainee in july of 2023.<br>
-                Hopped to Software development field in november 2023.
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus deleniti, blanditiis obcaecati, laborum incidunt ullam totam repellat laudantium, 
-                nemo numquam accusantium ratione ipsa animi at vel eius. Iure, nostrum est. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor earum itaque, veniam ducimus voluptas quia vero maiores? 
-                Recusandae, ipsa, quidem eum vero tempore dolorum, expedita unde consequatur at error sint?
+                Warehouse Operations and Customer Service (2017 – 2020) <br> <br>
+
+                My professional journey began in the dynamic world of warehouse operations, where I served as a dedicated team member managing a pick-up point.
+                In this role, I cultivated strong customer service skills while ensuring the seamless fulfillment of orders. 
+                The experience laid the groundwork for my commitment to delivering exceptional service and managing operational intricacies. <br> <br>
+                
+                Transition to Healthcare IT - Application Specialist (1.6 – 26.11.2023) <br> <br>
+                
+                Eager for new challenges, I transitioned into the realm of healthcare IT as an Application Specialist. 
+                Here, I found myself at the intersection of technology and healthcare, 
+                providing invaluable support to doctors and nurses grappling with IT-related challenges. 
+                The role not only deepened my technical expertise but also instilled a profound appreciation for the critical role technology plays in optimizing healthcare workflows.
+                <br> <br>
+                Software Development Intern (Present) <br> <br>
+
+                Driven by a passion for innovation, I embarked on a new chapter as a Software Development Intern, specializing in mobile app development. This phase of my journey represents a conscious choice to embrace the forefront of technology. Actively contributing to the creation of cutting-edge solutions, I am refining my skills in crafting user-friendly and efficient mobile applications.
             </div>
         </div>
         <footer class="footer" data-aos="fade-in">
